--- a/5.rock-paper-scissors/styles.css
+++ b/5.rock-paper-scissors/styles.css
@@ -29,7 +29,7 @@ h1 {
   margin: 10px;
   color: var(--very-dark-blue);
   background-color: var(--golden-yellow);
-  background-image: linear-gradient(#fecc4c, #ffac33);
+  background: linear-gradient(#f1be32, #feac32);
   border-color: var(--golden-yellow);
   border-width: 3px;
 }
